Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19632

pinchfinished event is not received on tapping a finger while pinch is ongoing.

    XMLWordPrintable

Details

    • 647ea955f3d1c45cce978a9b85b4732baf49a040 (qt/tqtc-qtdeclarative/5.12.0)

    Description

      I have a flickable which contains a pinchArea.

      PinchArea {
      id: pinchArea
      MouseArea
      {
      id: mouseArea
      onClicked:

      { . . . }

      anchors.fill: parent
      }
      onPinchStarted:
      {
      }
      onPinchFinished:
      {
      }
      }

      When the pinchUpdate is happening, if I remove one of my fingers and tap, I do not get a pinchfinished event (even after removing the second finger!)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            semanoha Selvakumar Manoharan
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes