Handle pinch correctly when one point is released and repressed.

The pinch is not finished at the time one point is released.  Ensure
that a onPinchStarted is called each time a repress happens, and
that onPinchFinished is called when all points are released.

Fixes: QTBUG-19632

Change-Id: I467dd612383f7dd11d58a9df063dd86860796216
Reviewed-on: http://codereview.qt.nokia.com/2059
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Bea Lam <bea.lam@nokia.com>